--- a/wp-content/themes/csm-mobile/assets/css/main.css
+++ b/wp-content/themes/csm-mobile/assets/css/main.css
@@ -264,7 +264,7 @@ textarea {
   src: url(../fonts/Rubik-Regular.eot?#iefix) format("embedded-opentype"), url(../fonts/Rubik-Regular.woff) format("woff"), url(../fonts/Rubik-Regular.ttf) format("truetype"), url(../fonts/Rubik-Regular.svg#Rubik-Regular) format("svg");
   font-weight: 400;
   font-style: normal; }
-.pseudo, .ico-tel:before, .services-block .li-content:before, .contact-block .line .b1:before, .contact-block .line .b2:before, #site-footer .line2 a:before {
+.pseudo, .ico-tel:before, .services-block .li-content:before, .contact-block .line .b1:before, .contact-block .line .b2:before, #site-footer .line2 a:before, .tels_group:before {
   content: '';
   display: block;
   position: absolute; }
@@ -315,6 +315,8 @@ a {
     background: #16A2E5;
     color: #fff;
     transition: 0.2s all; }
+  .btn:active, .btn:focus {
+    outline: none; }
   .btn.btn-blue {
     background: #16A2E5;
     color: #fff; }
@@ -327,6 +329,9 @@ a {
     padding: 13px 26px; }
   .btn.btn-left {
     text-align: left; }
+    .btn.btn-left span {
+      display: block;
+      font-family: "Rubik-Medium", sans-serif; }
 
 /*sticky footer*/
 html {
@@ -356,38 +361,38 @@ body {
       border-bottom: none;
       text-decoration: none; }
     .social-links li .ico-wh {
-      background: url("../images/whatsapp-glyph-green.svg") 0 0 no-repeat;
+      background: url("../images/whatsapp-glyph-white.svg") 0 0 no-repeat;
       background-size: 25px 25px;
       width: 25px;
       height: 25px; }
     .social-links li .ico-vb {
-      background: url("../images/viber.svg") 0 0 no-repeat;
+      background: url("../images/viber-white.svg") 0 0 no-repeat;
       background-size: 25px 25px;
       width: 25px;
       height: 25px; }
     .social-links li .ico-tg {
-      background: url("../images/telegram.svg") 0 0 no-repeat;
+      background: url("../images/telegram-white.svg") 0 0 no-repeat;
       background-size: 25px 25px;
       width: 25px;
       height: 25px; }
 
-.section2 .pic .social-links {
+.section2 .pic-mobile .social-links {
   opacity: 0.7;
   margin-top: 15px;
   border-top: 1px solid #fff;
   display: inline-flex; }
-  .section2 .pic .social-links li {
+  .section2 .pic-mobile .social-links li {
     margin-top: 10px; }
-    .section2 .pic .social-links li .ico-wh {
+    .section2 .pic-mobile .social-links li .ico-wh {
       background: url("../images/whatsapp-glyph-white.svg") 0 0 no-repeat;
       background-size: 25px 25px; }
-    .section2 .pic .social-links li .ico-vb {
+    .section2 .pic-mobile .social-links li .ico-vb {
       background: url("../images/viber-white.svg") 0 0 no-repeat;
       background-size: 25px 25px; }
-    .section2 .pic .social-links li .ico-tg {
+    .section2 .pic-mobile .social-links li .ico-tg {
       background: url("../images/telegram-white.svg") 0 0 no-repeat;
       background-size: 25px 25px; }
-    .section2 .pic .social-links li:last-child {
+    .section2 .pic-mobile .social-links li:last-child {
       margin-right: 0; }
 
 .form .header {
@@ -405,7 +410,7 @@ body {
   color: #7f7f7f;
   margin-bottom: 17px;
   border: 1px solid #ccc;
-  padding: 20px; }
+  padding: 10px; }
 .form textarea {
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
@@ -426,9 +431,9 @@ body {
   font-family: "Rubik-Medium", sans-serif; }
 
 div.wpcf7 .ajax-loader {
-  margin: 17px 0 0 4px;
+  margin: -33px 0 0 4px;
   position: absolute;
-  right: 150px; }
+  right: 15px; }
 
 input[type=submit] {
   padding: 12px 23px;
@@ -608,43 +613,23 @@ input[type=submit] {
   .section2 .flex {
     padding-bottom: 30px;
     border-bottom: 1px solid #ccc; }
-  .section2 .pic {
-    position: relative;
-    background: url("../images/man.png") 0 0 no-repeat;
-    background-size: 705px 381px;
-    width: 705px;
-    height: 381px;
-    left: -61px;
-    top: -46px;
-    padding-top: 46px; }
-    .section2 .pic .text {
-      padding: 41px 0 0 63px;
-      color: #fff;
-      max-width: 270px; }
-      .section2 .pic .text .header {
-        font-size: 22px;
-        font-family: "Rubik-Medium", sans-serif;
-        margin: 0; }
-      .section2 .pic .text p {
-        font-size: 18px;
-        font-family: "Rubik-Light", sans-serif;
-        margin: 7px 0 0;
-        line-height: 23px; }
   .section2 .pic-mobile {
-    display: none; }
+    position: relative; }
     .section2 .pic-mobile .text {
-      padding: 21px 0 40px;
-      color: #000;
-      max-width: 270px; }
+      position: absolute;
+      top: 0;
+      padding: 14% 0 0 20px;
+      color: #fff;
+      max-width: 170px; }
       .section2 .pic-mobile .text .header {
-        font-size: 22px;
+        font-size: 20px;
         font-family: "Rubik-Medium", sans-serif;
         margin: 0; }
       .section2 .pic-mobile .text p {
-        font-size: 18px;
+        font-size: 15px;
         font-family: "Rubik-Light", sans-serif;
         margin: 7px 0 0;
-        line-height: 23px; }
+        line-height: 21px; }
     .section2 .pic-mobile .social-links {
       opacity: 1;
       margin-top: 15px;
@@ -655,16 +640,20 @@ input[type=submit] {
         .section2 .pic-mobile .social-links li:last-child {
           margin-right: 0; }
     .section2 .pic-mobile .men img {
-      width: 100%; }
+      width: 124%; }
   .section2 .section2_right .header {
     font-size: 34px;
     line-height: 40px;
     font-family: "Rubik-Medium", sans-serif;
-    margin-top: 19px;
-    margin-bottom: 30px; }
+    margin-top: 30px;
+    margin-bottom: 20px; }
   .section2 .section2_right p {
     font-size: 18px;
     font-family: "Rubik-Light", sans-serif; }
+
+.switchto {
+  text-align: center;
+  padding: 10px 0; }
 
 .flex-w {
   display: flex;
@@ -774,7 +763,7 @@ input[type=submit] {
 #site-footer .line2 {
   min-height: 60px;
   font-size: 13px;
-  padding-bottom: 25px; }
+  padding-bottom: 5px; }
   #site-footer .line2 .flex {
     justify-content: space-between;
     padding-top: 7px; }
@@ -858,24 +847,117 @@ span.wpcf7-not-valid-tip {
   max-width: 354px; }
 
 .fancybox-slide--html .fancybox-close-small {
-  width: 29px;
-  height: 29px;
-  background: url("../images/cross.svg") 0 0 no-repeat;
+  width: 47px;
+  height: 47px;
+  background: url("../images/cross-03.svg") 0 0 no-repeat;
   background-size: contain;
   right: 15px !important;
   top: 15px !important; }
   .fancybox-slide--html .fancybox-close-small svg {
     display: none; }
 
-.section2 .pic {
-  display: none; }
+#popupmenu {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: url(../images/popupbg-comp.jpg) center top no-repeat;
+  background-size: cover;
+  padding: 15px 25px 25px; }
+  #popupmenu .fancybox-close-small {
+    background: url("../images/popup-cross-02.svg") 0 0 no-repeat;
+    width: 47px;
+    height: 47px;
+    background-size: contain; }
+  #popupmenu .addr {
+    max-width: 230px;
+    margin-bottom: 10px; }
+  #popupmenu .mail_links a {
+    text-decoration: none; }
+  #popupmenu .mail_links .social-links {
+    border-top: 1px solid #fff;
+    padding-top: 15px;
+    margin-top: 15px; }
 
+.popup-logo a {
+  display: block;
+  width: 111px;
+  height: 69px;
+  background: url("../images/popup-logo.svg") 0 0 no-repeat; }
+
+.flex_wrap {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  position: absolute;
+  top: 90px;
+  right: 15px;
+  left: 15px;
+  bottom: 0;
+  justify-content: center; }
+
+.flex.tels {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20%;
+  align-content: center; }
+  .flex.tels .btn {
+    font-size: 16px;
+    padding: 11px 23px;
+    margin-top: 8%; }
+
+.tels_group {
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: left;
+  padding-left: 20px;
+  position: relative; }
+  .tels_group:before {
+    width: 14px;
+    height: 14px;
+    background: url("../images/ico-tel-white.svg") 0 0 no-repeat;
+    background-size: 14px 14px;
+    left: 0;
+    top: 2px;
+    opacity: 0.7; }
+  .tels_group a {
+    color: #fff;
+    text-decoration: none;
+    margin-bottom: 5px; }
+
+.flex.contacts {
+  justify-content: center;
+  flex-direction: column;
+  color: #fff;
+  align-items: center; }
+  .flex.contacts a {
+    color: #fff; }
+
+@media screen and (orientation: landscape) {
+  #popupmenu .tels_group {
+    flex-direction: row; }
+    #popupmenu .tels_group a:last-child {
+      margin-left: 30px; }
+  #popupmenu .flex.tels {
+    margin-bottom: 30px; }
+  #popupmenu .flex.tels .btn {
+    margin: 10px auto 0;
+    max-width: 190px; }
+  #popupmenu .flex.contacts {
+    justify-content: space-between;
+    flex-direction: row; }
+  #popupmenu .addr {
+    text-align: left; } }
 .section2 .pic-mobile {
-  display: block; }
+  display: block;
+  overflow-x: hidden; }
 
 .section2 {
   margin-bottom: 18px;
-  padding-top: 25px; }
+  padding-top: 15px; }
 
 .mobile.topcontacts .flex1-2 {
   width: 50% !important;
@@ -886,7 +968,9 @@ span.wpcf7-not-valid-tip {
     text-align: right; }
 .mobile.topcontacts .ico-tel {
   /*display: flex;*/
-  margin: 0 25px 7px 0; }
+  margin: 0 25px 7px 0;
+  position: relative;
+  top: 5px; }
 .mobile.topcontacts .flex {
   justify-content: center; }
 .mobile.topcontacts .flex.tels {
@@ -903,11 +987,6 @@ span.wpcf7-not-valid-tip {
   font-size: 40px;
   line-height: 45px; }
 
-.section2_right .form .rounded_wrap {
-  border: none;
-  border-radius: 0;
-  overflow: visible; }
-
 .section2_right .form input[type=text] {
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
@@ -919,7 +998,7 @@ span.wpcf7-not-valid-tip {
   color: #7f7f7f;
   margin-bottom: 17px;
   border: 1px solid #ccc;
-  padding: 20px; }
+  padding: 10px; }
 
 .section2_right .form .rounded_wrap {
   display: block; }
@@ -962,13 +1041,100 @@ body {
 .header-text-block h1 {
   font-size: 50px; }
 
+.contact-block .line .b0, .section2 .section2_right .header {
+  font-size: 24px;
+  line-height: 29px; }
+
+.section2 .section2_right p, .contact-block .line .b1, .contact-block .line .b2, .contact-block .line .b3 {
+  font-size: 15px; }
+
+.section2_right {
+  padding-bottom: 30px;
+  border-bottom: 1px solid #ccc; }
+
+.section2_right .form .rounded_wrap span.wpcf7-form-control-wrap {
+  display: block;
+  padding: 0 8px; }
+
+.section2_right .form input[type=text] {
+  border: none;
+  border-bottom: 1px solid #ccc;
+  border-radius: 0;
+  margin-bottom: 0;
+  margin-top: 0; }
+  .section2_right .form input[type=text][name=your-tel] {
+    border-bottom: 0; }
+
+.section2_right .form input[type=submit] {
+  border-radius: 0;
+  width: 100%;
+  font-size: 16px; }
+
+#site-footer .botlogowrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-bottom: 5px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #ccc; }
+
+#site-footer .botlogo {
+  width: 100px;
+  height: 32px;
+  background-size: contain;
+  flex-grow: 1;
+  flex-basis: 100px; }
+
+#site-footer .line2 .copy {
+  flex-grow: 1;
+  flex-basis: 50%;
+  padding: 0; }
+
+#site-footer .line2 a {
+  margin: 0 auto; }
+
+#help {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding: 20px; }
+  #help .header span {
+    display: block;
+    font-family: inherit; }
+  #help .couple {
+    display: flex;
+    border: 1px solid #ccc;
+    border-radius: 30px;
+    overflow-x: hidden;
+    padding: 5px 0; }
+    #help .couple input {
+      padding: 10px 15px;
+      margin-bottom: 0;
+      border: none;
+      border-radius: 0;
+      height: 34px; }
+      #help .couple input:active, #help .couple input:focus {
+        outline: none; }
+    #help .couple span:last-child input {
+      border-left: 1px solid #ccc; }
+  #help .form textarea {
+    height: 90px;
+    border-radius: 30px; }
+    #help .form textarea:active, #help .form textarea:focus {
+      outline: none; }
+
 @media (min-width: 300px) {
   .services-block .li-content .text {
     font-size: 21px;
     line-height: 27px; }
 
   .ico-tel.top-tel {
-    display: none; } }
+    display: none; }
+
+  #site-footer .line2 .copy {
+    max-width: 170px; } }
 @media (min-width: 372px) {
   .in {
     padding: 0 15px; }
@@ -996,7 +1162,40 @@ body {
     margin-top: 5px; }
 
   .landbg {
-    padding-bottom: 20px; } }
+    padding-bottom: 20px; }
+
+  .contact-block .line .b0, .section2 .section2_right .header {
+    font-size: 28px;
+    line-height: 34px; }
+
+  .section2 .section2_right p, .contact-block .line .b1, .contact-block .line .b2, .contact-block .line .b3 {
+    font-size: 17px; }
+
+  .section2 .pic-mobile .text .header {
+    font-size: 23px; }
+
+  .section2 .pic-mobile .text p {
+    font-size: 17px; }
+
+  .section2 .pic-mobile .text {
+    max-width: 195px; }
+
+  .popup-logo a {
+    width: 130px;
+    height: 81px; }
+
+  #popupmenu .fancybox-close-small {
+    width: 54px;
+    height: 54px; }
+
+  .tels_group {
+    font-size: 23px;
+    line-height: 27px; }
+
+  .flex.tels .btn {
+    font-size: 19px;
+    padding: 15px 25px;
+    margin-top: 7%; } }
 @media (min-width: 409px) {
   .services-block .li-content .text {
     font-size: 25px;
@@ -1008,7 +1207,41 @@ body {
 
   .logo {
     width: 142px;
-    height: 88px; } }
+    height: 88px; }
+
+  .contact-block .line .b0, .section2 .section2_right .header {
+    font-size: 29px;
+    line-height: 36px; }
+
+  .section2 .section2_right p, .contact-block .line .b1, .contact-block .line .b2, .contact-block .line .b3 {
+    font-size: 18px; }
+
+  .section2 .pic-mobile .text .header {
+    font-size: 25px; }
+
+  .section2 .pic-mobile .text p {
+    font-size: 18px;
+    line-height: 26px; }
+
+  .section2 .pic-mobile .text {
+    max-width: 205px; }
+
+  .popup-logo a {
+    width: 143px;
+    height: 89px; }
+
+  #popupmenu .fancybox-close-small {
+    width: 60px;
+    height: 60px; }
+
+  .tels_group {
+    font-size: 25px;
+    line-height: 30px; }
+
+  .flex.tels .btn {
+    font-size: 19px;
+    padding: 15px 25px;
+    margin-top: 7%; } }
 @media (min-width: 476px) {
   .logo {
     width: 165px;
@@ -1020,8 +1253,35 @@ body {
 
   .btn {
     font-size: 19px;
-    line-height: 22px; } }
+    line-height: 22px; }
+
+  .contact-block .line .b0, .section2 .section2_right .header {
+    font-size: 33px;
+    line-height: 42px; }
+
+  .section2 .section2_right p, .contact-block .line .b1, .contact-block .line .b2, .contact-block .line .b3 {
+    font-size: 21px; }
+
+  .section2 .pic-mobile .text .header {
+    font-size: 29px; }
+
+  .section2 .pic-mobile .text p {
+    font-size: 21px;
+    line-height: 29px; }
+
+  .section2 .pic-mobile .text {
+    max-width: 235px; } }
 @media (min-width: 668px) {
+  .btn {
+    font-size: 15px;
+    line-height: 17px; }
+
+  .btn.btn-left span {
+    display: inline; }
+
+  .topcontacts .btn {
+    padding: 12px 20px; }
+
   .ico-tel.top-tel {
     display: inline-block; }
 
@@ -1042,18 +1302,149 @@ body {
   .flex3 {
     width: 33%;
     max-width: 33%;
-    flex: 0 0 33%; } }
+    flex: 0 0 33%; }
+
+  .contact-block .line .b0, .section2 .section2_right .header {
+    font-size: 24px;
+    line-height: 29px; }
+
+  .section2 .section2_right p, .contact-block .line .b1, .contact-block .line .b2, .contact-block .line .b3 {
+    font-size: 15px; }
+
+  .section2 .pic-mobile .text .header {
+    font-size: 23px; }
+
+  .section2 .pic-mobile .text p {
+    font-size: 17px;
+    line-height: 24px; }
+
+  .section2 .pic-mobile .text {
+    padding: 80px 0 0 20px;
+    max-width: 235px; }
+
+  .section2 .pic-mobile .men img {
+    width: auto;
+    max-width: 100%; }
+
+  /**/
+  .section2_right .form .rounded_wrap {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-between; }
+
+  .section2_right .form .rounded_wrap span.wpcf7-form-control-wrap {
+    display: flex;
+    padding: 0 8px; }
+
+  .section2_right .form input[type=text] {
+    border: none; }
+
+  .section2_right .form input[type=submit] {
+    width: 200px; }
+
+  .section2_right .form input[type=text][name=your-tel] {
+    border-left: 1px solid #ccc; }
+
+  div.wpcf7 .ajax-loader {
+    margin: 17px 0 0 4px;
+    position: absolute;
+    right: 195px; }
+
+  /**/
+  #site-footer .botlogowrapper {
+    padding: 0;
+    border-bottom: none; }
+
+  #site-footer .botlogo {
+    width: 110px;
+    height: 35px; }
+
+  #site-footer .line2 .copy {
+    flex-basis: auto;
+    padding-left: 20px;
+    padding-top: 11px;
+    margin-bottom: 0; }
+
+  #site-footer .line2 .flex, #site-footer .botlogowrapper {
+    display: flex; }
+
+  #site-footer .line2 .copy {
+    max-width: none; } }
 @media (min-width: 735px) {
   .services-block .li-content .text {
     font-size: 23px;
-    line-height: 26px; } }
+    line-height: 26px; }
+
+  .contact-block .line .b0, .section2 .section2_right .header {
+    font-size: 27px;
+    line-height: 32px; }
+
+  .section2 .section2_right p, .contact-block .line .b1, .contact-block .line .b2, .contact-block .line .b3 {
+    font-size: 17px; }
+
+  .section2 .pic-mobile .text .header {
+    font-size: 24px; }
+
+  .section2 .pic-mobile .text p {
+    font-size: 18px;
+    line-height: 24px; }
+
+  .section2 .pic-mobile .text {
+    padding: 80px 0 0 20px;
+    max-width: 275px; }
+
+  .section2 .pic-mobile .men img {
+    width: auto; } }
 @media (min-width: 812px) {
   .services-block .li-content .text {
     font-size: 24px;
-    line-height: 29px; } }
+    line-height: 29px; }
+
+  .contact-block .line .b0, .section2 .section2_right .header {
+    font-size: 28px;
+    line-height: 36px; }
+
+  .section2 .section2_right p, .contact-block .line .b1, .contact-block .line .b2, .contact-block .line .b3 {
+    font-size: 18px; }
+
+  .section2 .pic-mobile .text .header {
+    font-size: 29px; }
+
+  .section2 .pic-mobile .text p {
+    font-size: 21px;
+    line-height: 28px; }
+
+  .section2 .pic-mobile .text {
+    padding: 80px 0 0 20px;
+    max-width: 275px; }
+
+  .section2 .pic-mobile .men img {
+    width: auto; } }
 @media (min-width: 977px) {
   .services-block .li-content .text {
     font-size: 29px;
-    line-height: 35px; } }
+    line-height: 35px; }
+
+  .contact-block .line .b0, .section2 .section2_right .header {
+    font-size: 33px;
+    line-height: 43px; }
+
+  .section2 .section2_right p, .contact-block .line .b1, .contact-block .line .b2, .contact-block .line .b3 {
+    font-size: 21px; }
+
+  .section2 .pic-mobile .text .header {
+    font-size: 29px; }
+
+  .section2 .pic-mobile .text p {
+    font-size: 21px;
+    line-height: 28px; }
+
+  .section2 .pic-mobile .text {
+    padding: 80px 0 0 20px;
+    max-width: 275px; }
+
+  .section2 .pic-mobile .men img {
+    width: auto; } }
 
 /*# sourceMappingURL=main.css.map */
