--- a/wp-content/themes/csm-mobile/assets/css/main.css
+++ b/wp-content/themes/csm-mobile/assets/css/main.css
@@ -880,7 +880,7 @@ span.wpcf7-not-valid-tip {
     padding-top: 15px;
     margin-top: 15px; }
 
-.popup-logo a {
+.popup-logo span {
   display: block;
   width: 111px;
   height: 69px;
@@ -901,7 +901,12 @@ span.wpcf7-not-valid-tip {
   display: flex;
   flex-direction: column;
   margin-bottom: 20%;
-  align-content: center; }
+  align-content: center;
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+  align-items: center;
+  -webkit-align-items: center; }
   .flex.tels .btn {
     font-size: 16px;
     padding: 11px 23px;
@@ -932,7 +937,11 @@ span.wpcf7-not-valid-tip {
   justify-content: center;
   flex-direction: column;
   color: #fff;
-  align-items: center; }
+  align-items: center;
+  align-content: center;
+  display: -webkit-flex;
+  -webkit-justify-content: center;
+  -webkit-align-items: center; }
   .flex.contacts a {
     color: #fff; }
 
@@ -1137,7 +1146,12 @@ body {
 
   #help .flex {
     flex-direction: row;
-    align-items: center; }
+    align-items: center;
+    align-content: center;
+    display: -webkit-flex;
+    justify-content: center;
+    -webkit-justify-content: center;
+    -webkit-align-items: center; }
     #help .flex .form, #help .flex .pictures {
       flex-basis: 50%; }
 
@@ -1262,18 +1276,41 @@ body {
     font-size: 19px;
     padding: 15px 25px;
     margin-top: 7%; } }
-@media (min-width: 476px) {
-  .logo {
-    width: 165px;
-    height: 102px; }
+@media (min-width: 409px) and (orientation: landscape) {
+  .tels_group {
+    font-size: 23px;
+    line-height: 30px; }
 
+  .popup-logo span {
+    width: 101px;
+    height: 63px; }
+
+  #popupmenu .fancybox-close-small {
+    width: 48px;
+    height: 48px; }
+
+  .flex.tels .btn {
+    font-size: 17px;
+    padding: 15px 25px; }
+
+  .flex_wrap {
+    top: 80px; } }
+@media (min-width: 476px) {
   .services-block .li-content .text {
-    font-size: 29px;
-    line-height: 41px; }
+    font-size: 25px;
+    line-height: 35px;
+    margin-bottom: 20px; }
+
+  .services-block {
+    padding: 36px 30px 0; }
+
+  .logo {
+    width: 142px;
+    height: 88px; }
 
   .btn {
-    font-size: 19px;
-    line-height: 22px; }
+    font-size: 16px;
+    line-height: 20px; }
 
   .contact-block .line .b0, .section2 .section2_right .header {
     font-size: 33px;
